# rls

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  display.rs  entry.rs  lib.rs  main.rs
tests/: cli.rs
