[package]
name = "rls"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.18.2"
log = "0.4"
env_logger = "0.11.8"
ctrlc = "3.5"
signal-hook = "0.3.18"
crossbeam-channel = "0.5.15"
confy = "0.3.1"
term_grid = "0.2.0"
terminal_size = "0.4.3"
chrono = "0.4.42"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
predicates = "3.1.0"
